Bug: 74993 Filter Condition drop down boxes doesn't have enough spacing fix padding for filter conditions
http://bugzilla.zimbra.com/show_bug.cgi?id=74993

Copied from Perforce
 Change: 375364

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -3782,6 +3782,7 @@ HTML>BODY .appt-selected .appt_allday_body
 #IFDEF GECKO
 	border:1px dotted #555;
 #ENDIF
+    padding: 0;
 }
 
 .infoBox {
